--- a/5-01_countdown/step1/index.html
+++ b/5-01_countdown/step1/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>テンプレート</title>
-<link href="../../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="../../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../../_common/css/style.css" rel="stylesheet">
+<link href="../../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -18,8 +18,7 @@
 <main>
 <div class="container">
 <section>
-	<p>円周率は<span id="pi"></span></p>
-	<p>普通に切り捨てると<span id="floor"></span>です。</p>
+	<p>いまから<span id="timer"></span>以内に注文すると50％オフ！</p>
 </section>
 </div><!-- /.container -->
 </main>
